book/style.css
body {
    font-family: system-ui, sans-serif;
    color: light-dark(hsl(0, 0%, 25%), hsl(0, 0%, 90%));
    line-height: 1.5;
    margin: 0;
}

h1,
h2 {
    font-weight: normal;
    margin: 0 0 0.5em;
}

p {
    margin: 0 0 1em;
}

pre,
code {
    font-family: monospace, monospace;
    font-size: 0.9em;
    background: light-dark(hsl(0, 0%, 90%), hsl(0, 0%, 25%));
}

pre {
    padding: 0.5em 0.8em;
    white-space: pre-wrap;
}

body > header {
    border-bottom: solid 1px hsl(0, 0%, 50%);
    text-align: center;
    padding: 1em;
}

#toc {
    text-wrap: none;
}
#toc ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
#toc ul ul {
    padding-left: 1em;
}

main {
    max-width: 40em;
    margin: auto;
    padding: 1em;
}

main > header {
    display: flex;
    align-items: end;
    margin-bottom: 1em;
}
main > header > h1 {
    flex: 1;
    padding-right: 1em;
    margin: 0;
    white-space: nowrap;
}

.warning {
    background: #ffaaaa;
    padding: 1ex;
}

/* wide screen, show nav on left */
@media screen and (min-width: 70em) {
    nav {
        left: 2em;
        position: fixed;
    }
    #toc-toggle,
    #toc-label {
        display: none;
    }
}

/* narrow screen screen, hide nav behind checkbox */
@media screen and (max-width: 70em) {
    nav input[type="checkbox"]:not(:checked) ~ #toc {
        display: none;
    }
}

